<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/save_task"
    android:icon="@drawable/ic_add_box_1"
    android:title="ADD TASK"
    app:showAsAction="ifRoom"/>
</menu>