<resources>
    <string name="app_name">TaskManager</string>

    <string-array name="task_types">
        <item>APPOINTMENT</item>
        <item>CHECKLIST</item>
        <item>CHECKLISTGROUP</item>
    </string-array>

    <string-array name="priority_types">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>

    <string-array name="status_types">
        <item>TODO</item>
        <item>DONE</item>
    </string-array>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="keep_tapping">keep tapping</string>
    <string name="done">done</string>
</resources>